--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "apollo-datasource": "^0.1.3",
     "apollo-datasource-rest": "^0.1.5",
-    "apollo-server": "^2.15.0",
+    "apollo-server-express": "^2.19.2",
     "apollo-server-testing": "^2.15.0",
     "dotenv": "^6.2.0",
+    "express": "^4.17.1",
     "graphql": "^14.6.0",
     "isemail": "^3.1.3",
     "nodemon": "^1.18.4"
